Commit al archivo del blogpost para su versión.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Documento para modificar con Git</title>
 </head>
 <body>
-    <h1> Esto va a simular un blog en html </h1>
-    <p> Y esto es un parrafo de inicio </p>
+    <!--Vamos a crear un div para poder manipular los estilos-->
+    <div id="container">
+        <h1> Esto va a simular un blog en html </h1>
+        <p> Y esto es un parrafo de inicio </p>
+        <!--Vamos a crear mas ramas en HTML y CSS-->
+        <p> También vamos a crear otras ramas interesantes, posiblemente este 
+            archivo lo modifique tambien con Git </p>
+    </div>
 </body>
 </html>
