--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 <body>
     <!--Vamos a crear un div para poder manipular los estilos-->
     <div id="container">
-        <h1> Esto va a simular un blog en html </h1>
-        <p> Y esto es un parrafo de inicio </p>
-        <!--Vamos a crear mas ramas en HTML y CSS-->
-        <p> También vamos a crear otras ramas interesantes, posiblemente este 
-            archivo lo modifique tambien con Git </p>
+        <div id ="cabecera">
+            <h3>Cabecera</h3>
+        </div>
+        <div>
+            <h1> Esto va a simular un blog en html </h1>
+            <p> Y esto es un parrafo de inicio </p>
+            <!--Vamos a crear mas ramas en HTML y CSS-->
+            <p> También vamos a crear otras ramas interesantes, posiblemente este 
+                archivo lo modifique tambien con Git </p>
+        </div>
+        
     </div>
 </body>
 </html>
