Hemos cambiado la cabecera y pusimos CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Vamos a crear un div para poder manipular los estilos-->
     <div id="container">
         <div id ="cabecera">
-            <h3>Cabecera</h3>
+            <h3>Blog :D</h3>
         </div>
         <div>
             <h1> Esto va a simular un blog en html </h1>
@@ -18,6 +18,11 @@
             <!--Vamos a crear mas ramas en HTML y CSS-->
             <p> También vamos a crear otras ramas interesantes, posiblemente este 
                 archivo lo modifique tambien con Git </p>
+            <p>Puede ser un buen blog mas adelante</p>
+            <p> Este enlace conduce a la documentacion de Git</p>
+            <a href="https://git-scm.com"> Documentacion de Git </a>
+
+            
         </div>
         
     </div>
