Agregado el contenido adicional del blog

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!--Vamos a crear mas ramas en HTML y CSS-->
         <p> También vamos a crear otras ramas interesantes, posiblemente este 
             archivo lo modifique tambien con Git </p>
+        <p>Siento que este blogpost se verá bastante raro si fuera uno real donde aparecen y desaparecen cosas de los archivos a lo loco</p>
     </div>
 </body>
 </html>
