Añadí nuevas líneas al blog
Desde github

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="container">
         <h1> Esto va a simular un blog en html </h1>
         <p> Y esto es un parrafo de inicio </p>
+        <p>Esto lo modifique, pero desde Github en línea </p>
         <!--Vamos a crear mas ramas en HTML y CSS-->
         <p> También vamos a crear otras ramas interesantes, posiblemente este 
             archivo lo modifique tambien con Git </p>
